apps/tpi-1/homeassistant-assist/assist-llm-cpu/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: assist-llm-cpu-private
  namespace: homeassistant-assist
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "assist-llm.${domain_wahoo_li:=wahoo.li}"
  rules:
  - filters:
    - type: URLRewrite
      urlRewrite:
        hostname: assist-llm-cpu-predictor.homeassistant-assist.svc.cluster.local
    backendRefs:
    - name: envoy-gw-ai-tpi-1
      namespace: envoy-gateway-system
      port: 80
